apps/miniflux/base/miniflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  selector:
    app: miniflux
  ports:
  - port: 8080
    targetPort: 8080
    name: http
