apps/miniflux/base/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: miniflux
      port:
        number: 8080
  tls:
  - hosts:
    - miniflux
